--- a/app/src/main/res/layout/activity_segitiga.xml
+++ b/app/src/main/res/layout/activity_segitiga.xml
@@ -6,12 +6,14 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     tools:context=".segitiga">
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginVertical="100dp"
         android:orientation="vertical">
 
         <TextView
@@ -29,6 +31,17 @@
             android:text="SEGITIGA"
             android:textAlignment="center"
             android:textSize="20sp" />
+        <Button
+            android:id="@+id/hapus"
+            android:layout_width="wrap_content"
+            android:layout_gravity="end"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="20dp"
+            android:text="Clear"
+            android:background="@drawable/button_custom"
+            android:layout_height="wrap_content">
+
+        </Button>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -45,32 +58,63 @@
                 android:fontFamily="@font/poppins_semibold"/>
 
             <EditText
-                android:id="@+id/editTextText3"
+                android:id="@+id/alas"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="numberDecimal" />
+                android:inputType="number" />
 
             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="TINGGI"
+                android:layout_marginTop="30dp"
                 android:textSize="20sp"
                 android:fontFamily="@font/poppins_semibold"/>
 
             <EditText
-                android:id="@+id/editTextText4"
+                android:id="@+id/tinggi"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="numberDecimal" />
+                android:inputType="number" />
 
             <Button
                 android:id="@+id/button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
                 android:text="HITUNG" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:orientation="horizontal">
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Hasil"
+                    android:textSize="20sp"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:layout_weight="1">
+
+                </TextView>
+
+                <EditText
+                    android:id="@+id/hasil"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:layout_weight="2"
+                    android:inputType="none"
+                    android:focusableInTouchMode="false"/>
+
+            </LinearLayout>
+
+
         </LinearLayout>
 
     </LinearLayout>
