--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,17 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.KALKULATORBANGUNDATA" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.KALKULATORBANGUNDATA" parent="Theme.Material3.DayNight">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+
     </style>
 
-    <style name="Theme.KALKULATORBANGUNDATA" parent="Base.Theme.KALKULATORBANGUNDATA" />
+    <style name="ActionBarStyle" parent="Widget.AppCompat.Light.ActionBar">
+
+    </style>
+
+
+    <style name="Theme.KALKULATORBANGUNDATA" parent="Base.Theme.KALKULATORBANGUNDATA">
+        <item name="actionBarStyle">@style/ActionBarStyle</item>
+
+    </style>
 </resources>
