--- a/app/src/main/res/layout/activity_persegi_panjang.xml
+++ b/app/src/main/res/layout/activity_persegi_panjang.xml
@@ -16,25 +16,6 @@
         android:layout_height="match_parent"
         android:layout_marginBottom="546dp"
         android:background="@drawable/bg2" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/poppins_semibold"
-        android:text="KALKULATOR BANGUN DATA"
-        android:textAlignment="center"
-        android:layout_marginVertical="10dp"
-        android:textSize="20sp"
-        android:textColor="@color/white"/>
-    <Button
-        android:id="@+id/back"
-        android:layout_width="60dp"
-        android:layout_height="50dp"
-        android:drawableEnd="@drawable/baseline_arrow_back_24"
-        android:layout_marginHorizontal="5dp"
-        android:background=""
-        android:padding="10dp"
-        android:textColor="@android:color/white"/>
-
 
 
 
@@ -181,7 +162,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="number" />
+                android:inputType="none"
+                android:focusable="false"/>
 
         </LinearLayout>
     </LinearLayout>
