DONE SEMUA -Persegi

--- a/app/src/main/res/layout/activity_lingkaran.xml
+++ b/app/src/main/res/layout/activity_lingkaran.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
     tools:context=".Lingkaran">
 
     <LinearLayout
@@ -12,24 +13,22 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <LinearLayout
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:background="#673AB7"
-            android:orientation="horizontal">
+            android:layout_height="wrap_content"
+            android:textSize="30sp"
+            android:fontFamily="@font/poppins_semibold"
+            android:textAlignment="center"
+            android:text="BANGUN DATAR"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="LINGKARAN"
+            android:textSize="25sp"
+            android:fontFamily="@font/poppins_semibold"
+            android:textAlignment="center"/>
 
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_weight="1"
-                android:text="Bangun Datar Lingkaran"
-                android:textColor="#FFFFFF"
-                android:textSize="24sp" />
-
-        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
