--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,7 +72,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="PERSEGI"
-                android:onClick="openpersegi"/>
+                android:onClick="openPersegi"/>
 
             <Button
                 android:id="@+id/button5"
